--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   "dependencies":	{
     "quickweb-base":    ">= 0.4.0",
     "quickweb-runner":  ">= 0.4.0",
-    "quickweb-mvc":     ">= 0.4.0",
-    "tracer":           "*"
+    "quickweb-mvc":     ">= 0.4.0"
   }
 }
