--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies":	{
     "quickweb-base":    ">= 0.4.0",
     "quickweb-runner":  ">= 0.4.0",
-    "quickweb-mvc":     ">= 0.4.0"
+    "quickweb-mvc":     ">= 0.4.0",
+    "socket.io":        ">= 0.9.6"
   }
 }
