命令行工具

--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "quickweb-base":    ">= 0.4.0",
     "quickweb-mvc":     ">= 0.4.0",
     "socket.io":        ">= 0.9.6"
+  },
+  "bin": {
+    "taskmanager":      "./bin/taskmanager"
   }
 }
