--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name":           "taskmanager",
   "main":           "./lib/server.js",
-  "version":        "0.1.1",
+  "version":        "0.1.2",
   "description":    "Node.js file runner and manager",
   "author":         "leizongmin <leizongmin@gmail.com> (http://ucdok.com)",
   "repository": {
@@ -14,7 +14,8 @@
   "dependencies":	{
     "quickweb-base":    ">= 0.4.0",
     "quickweb-mvc":     ">= 0.4.0",
-    "socket.io":        ">= 0.9.6"
+    "socket.io":        ">= 0.9.6",
+    "node-schedule":    ">= 0.1.5"
   },
   "bin": {
     "taskmanager":      "./bin/taskmanager"
