--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "node":         ">= 0.6.0"
   },
   "dependencies":	{
-    "quickweb-base":    ">= 0.4.0",
-    "quickweb-mvc":     ">= 0.4.0",
-    "socket.io":        ">= 0.9.6",
-    "node-schedule":    ">= 0.1.5"
+    "quickweb-base":    "0.4.0",
+    "quickweb-mvc":     "0.4.0",
+    "socket.io":        "0.9.6",
+    "node-schedule":    "0.1.5"
   },
   "bin": {
     "taskmanager":      "./bin/taskmanager"
